feat: searcher mocked with html and css

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,5 +3,6 @@ $base-color: #ffe600;
 $black: #333333;
 $dark-gray: #666666;
 $light-gray: #999999;
-$white: #eeeeee;
+$gray: #eeeeee;
+$white: #ffffff;
 $blue: #3483fa;
