--- a/src/styles/components/Layout/_logo.scss
+++ b/src/styles/components/Layout/_logo.scss
@@ -3,6 +3,6 @@
   justify-content: start;
   align-items: center;
 }
-.Logo__container {
-  margin: 0.5em 0;
-}
+// .Logo__container {
+//   margin: 0.5em 0;
+// }
