--- a/src/styles/components/Layout/_searcher.scss
+++ b/src/styles/components/Layout/_searcher.scss
@@ -1,4 +1,39 @@
 .Searcher__container {
   display: flex;
   flex-direction: row;
+  align-items: center;
+}
+
+.Searcher__input {
+  font-size: 18px;
+  width: 100%;
+  border: none;
+  border-radius: 2px;
+  padding: 0.3em;
+  z-index: 0;
+}
+
+.Searcher__input::placeholder {
+  font-weight: 100;
+  color: $light-gray;
+  border: red;
+}
+
+.Searcher__input:focus {
+  border: red;
+  outline: none;
+}
+
+.Searcher__lens {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: $gray;
+  z-index: 1;
+  width: auto;
+  height: 100%;
+  padding: 6px;
+}
+
+.Searcher__lens img {
 }
