feat: product list component/page

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,3 +6,8 @@ $light-gray: #999999;
 $gray: #eeeeee;
 $white: #ffffff;
 $blue: #3483fa;
+
+// Font size
+$price-font-size: 24px;
+$description-font-size: 18px;
+$notes-font-size: 12px;
