feat: content of ProductDetail

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,6 @@
 @import './variables';
+@import './globals';
 @import './components/main.scss';
 @import './home';
 @import './products';
+@import './productDetail';
