--- a/src/styles/components/Products/_breadCrumb.scss
+++ b/src/styles/components/Products/_breadCrumb.scss
@@ -3,7 +3,15 @@
   grid-row: 1;
 }
 
-.Breadcrumb__block > p {
+.Breadcrumb__block > span {
+  font-size: $breadcrumb-font-size;
+  color: $light-gray;
+  margin: 1rem 0;
+}
+
+.Breadcrumb__block > a {
+  display: inline-block;
+  text-decoration: none;
   font-size: $breadcrumb-font-size;
   color: $light-gray;
   margin: 1rem 0;
