fix: margin with detail of photo

--- a/src/styles/_productDetail.scss
+++ b/src/styles/_productDetail.scss
@@ -38,7 +38,7 @@
 
 .ProductDetail__description {
   grid-column: 1 / 11;
-  margin: 2rem 1rem;
+  margin: 0 1rem;
 }
 
 .ProductDetail__description_title {
